# crysSCFT_sample

./: Readme.md  Readme.md.bak  TestScript.sh
src/: CMakeLists.txt  crysSCFT_sample.cpp  solver_3m.h  solver_Pmmm.h  solver_base.h  solver_p1.h  solver_utilities.h
src/utilities/: alignment.h  assume_hint.h  c_array.h  omp_macros.h
